Fixed rounded rectangles issue in Karnaugh Map in Dark Mode
Increased the size of KMap and changed SVG paths color

Minor color change

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -12,4 +12,4 @@ $btn-primary-color: $blue-200;
 $base-button-color: $grey-dk-250;
 
 $code-background-color: $grey-dk-250;
-$base-svg-path: $white;
+$base-svg-path: #026e57;
